# product-comparison

./: .gitignore  create_categeries.ipynb  description.txt  pyproject.toml
.github/workflows/: main.yml
app/: helpers.py  interface.py  main.py  pool_for_comparison.py  setup_comparison.py
app/scripts/: match_interface.py  process_inputs.py
app/tests/: test_pool_comparison.py  test_setup_comparison.py
app/tests/resources/: inspecting.yml  ounass-2023-06-18.csv  pool_for_comparison.yml  pool_for_comparison_gui.yml
app/tests/resources/compare/: farfetch-2023-06-18.csv  test_consolidate_matched_2.csv  test_get_all_matched.csv  test_matched_to_singles.csv  test_matched_to_tree.csv  test_rework_to_pair.csv
app/tests/resources/dictionary/: brand.csv  category.csv
app/tests/resources/gui_dir/: farfetch_mini_ounass_mini_gui_match.csv  farfetch_mini_ounass_mini_match.csv
app/tests/resources/input/: farfetch-2023-06-18.csv
app/tests/resources/json/: farfetch_mini_ounass_mini.json  farfetch_mini_ounass_mini_gui.json  test_consolidate_matched.json  test_fetch_unpaired_group.json  test_fetch_unpaired_group_mini.json  test_matched_to_tree.json  test_remove_matched.json  test_remove_matched_after.json  test_remove_matched_to_tree.json  (+3 more)
conf/: inspecting.yml  inspecting_implement.yml  inspecting_implement_bag.yml  inspecting_mini.yml  pool_for_comparison_gui.yml  pool_for_comparison_gui_implemen_bag.yml  pool_for_comparison_gui_implement.yml
conf/template/: inspecting_template.yml  pool_for_comparison_gui_template.yml
dictionary/: brand.csv  category.csv  gender.csv
