[tool.poetry]
name = "product-comparison"
version = "0.1.0"
description = ""
authors = ["Tarik El Lel <tareklel@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
pandas = "^2.0.3"
PyYAML = "^6.0"
pillow = "^10.0.1"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.2"
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
